Fix width of page body on mobile

--- a/src/components/Body/index.module.css
+++ b/src/components/Body/index.module.css
@@ -31,7 +31,7 @@
     /* Larger than mobile - tablet and desktop */
     .body {
         margin-top: 2rem;
-        width: 75vw;
+        width: 70vw;
     }
 }
 
